--- a/assets/css/style.1.css
+++ b/assets/css/style.1.css
@@ -1,6 +1,36 @@
-html, body, #viewDiv {
+html, body {
     padding: 0;
     margin: 0;
-    height: 90%;
+    height: 100%;
     width: 100%;
 }
+
+#panel-map{
+    width: 30%;
+    height: 100%;
+    float: left;
+}
+
+#panel-linechart{
+    width: 30%;
+    height: 100%;
+    float: left;
+}
+
+#viewDiv{
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.axis--x path {
+    display: none;
+}
+
+.line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+
